[package]
name = "webhook_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
chrono = "0.4.42"
lazy_static = "1.5.0"
tower = "0.5.2"
